# simcoupe

./: .editorconfig  CMakeLists.txt  ReadMe.md
Base/: CMakeLists.txt  Frame.cpp  Frame.h  SAMIO.cpp  SimCoupe.h  Sound.h
Resource/: CMakeLists.txt
SDL/: CMakeLists.txt  Input.cpp  Input.h  OSD.cpp  SDL20.cpp  SDL20_GL3.cpp  SDL20_GL3.h  UI.cpp
SDL/OSX/: CMakeLists.txt
Win32/: CMakeLists.txt  D3D11Video.cpp  D3D11Video.h  UI.cpp
Win32/Shaders/: CMakeLists.txt
cmake/: HlslCompile.cmake
package/: install.iss  make_linux_release.sh  make_macos_release.sh  make_windows_release.ps1  simcoupe.desktop
