set(RESOURCE_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/atom.rom
  ${CMAKE_CURRENT_SOURCE_DIR}/atomlite.rom
  ${CMAKE_CURRENT_SOURCE_DIR}/samcoupe.rom
  ${CMAKE_CURRENT_SOURCE_DIR}/sp0256-al2.bin
  ${CMAKE_CURRENT_SOURCE_DIR}/samports.map
  ${CMAKE_CURRENT_SOURCE_DIR}/samrom.map
  ${CMAKE_CURRENT_SOURCE_DIR}/samdos2.map
  ${CMAKE_CURRENT_SOURCE_DIR}/samdos2.sbt
  ${CMAKE_CURRENT_SOURCE_DIR}/Roboto-Medium.ttf)

target_sources(${PROJECT_NAME}
  PRIVATE
    ${RESOURCE_FILES})

if (APPLE)
  get_target_property(PREV_RESOURCE_FILES ${PROJECT_NAME} RESOURCE)
  set(RESOURCE_FILES ${PREV_RESOURCE_FILES} ${RESOURCE_FILES})

  set_target_properties(${PROJECT_NAME}
    PROPERTIES
      RESOURCE "${RESOURCE_FILES}")
endif()

install(
  FILES ${RESOURCE_FILES}
  DESTINATION ${RESOURCE_DIR})
